# VulnScope

./: .gitignore  Cargo.toml  README.md
migrations/: 001_init.sql
src/: auth.rs  config.rs  database.rs  handlers.rs  main.rs  models.rs  services.rs  utils.rs
src/collectors/: aliyun_avd.rs  chaitin_vuldb.rs  cve_details.rs  exploit_db.rs  github.rs  mod.rs  nvd.rs  qianxin_ti.rs  threatbook_x.rs
static/css/: main.css  style.css
static/js/: dashboard.js  layout.js  main.js  main.js.backup  search.js  vulnerabilities.js
templates/: analytics.html  dashboard.html  login.html  register.html  search.html  settings.html  vulnerabilities.html  vulnerability_detail.html
