[package]
name = "vulnscope"
version = "0.1.0"
edition = "2021"
authors = ["VulnScope Team"]
description = "Advanced vulnerability intelligence collection and analysis platform"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Async
futures = "0.3"
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenvy = "0.15"

# Authentication
jsonwebtoken = "9.2"
bcrypt = "0.15"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Regex
regex = "1.0"

# HTML parsing
scraper = "0.17"

# URL parsing
url = "2.4"

# Random generation
rand = "0.8"
fastrand = "2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort" 